--- a/SPQ/SPQ.csproj
+++ b/SPQ/SPQ.csproj
@@ -44,11 +44,47 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AI.Agent.Intercept, Version=2.0.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.2.0.6\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AI.DependencyCollector, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.DependencyCollector.2.2.0\lib\net45\Microsoft.AI.DependencyCollector.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AI.PerfCounterCollector, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.PerfCounterCollector.2.2.0\lib\net45\Microsoft.AI.PerfCounterCollector.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AI.ServerTelemetryChannel, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.2.2.0\lib\net45\Microsoft.AI.ServerTelemetryChannel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AI.Web, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.Web.2.2.0\lib\net45\Microsoft.AI.Web.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AI.WindowsServer, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.WindowsServer.2.2.0\lib\net45\Microsoft.AI.WindowsServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.ApplicationInsights, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.ApplicationInsights.2.2.0\lib\net45\Microsoft.ApplicationInsights.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SpotifyAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SpotifyAPI-NET.2.14.1\lib\SpotifyAPI.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -112,9 +148,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -168,16 +201,57 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AlbumsController.cs" />
+    <Compile Include="Controllers\ArtistsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PlaylistController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\TracksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Spotify Model\AddedBy.cs" />
+    <Compile Include="Models\Spotify Model\Album.cs" />
+    <Compile Include="Models\Spotify Model\Albums.cs" />
+    <Compile Include="Models\Spotify Model\Artist.cs" />
+    <Compile Include="Models\Spotify Model\Artists.cs" />
+    <Compile Include="Models\Spotify Model\AudioFeaturesTrack.cs" />
+    <Compile Include="Models\Spotify Model\Copyright.cs" />
+    <Compile Include="Models\Spotify Model\Cursors.cs" />
+    <Compile Include="Models\Spotify Model\ExportExcel.cs" />
+    <Compile Include="Models\Spotify Model\ExternalIds.cs" />
+    <Compile Include="Models\Spotify Model\ExternalUrls.cs" />
+    <Compile Include="Models\Spotify Model\Followers.cs" />
+    <Compile Include="Models\Spotify Model\Image.cs" />
+    <Compile Include="Models\Spotify Model\ItemArtist.cs" />
+    <Compile Include="Models\Spotify Model\ItemSavedAlbum.cs" />
+    <Compile Include="Models\Spotify Model\ItemSavedTrack.cs" />
+    <Compile Include="Models\Spotify Model\MainAlbums.cs" />
+    <Compile Include="Models\Spotify Model\MainArtists.cs" />
+    <Compile Include="Models\Spotify Model\MainPlaylists.cs" />
+    <Compile Include="Models\Spotify Model\MainTracks.cs" />
+    <Compile Include="Models\Spotify Model\Owner.cs" />
+    <Compile Include="Models\Spotify Model\Playlist.cs" />
+    <Compile Include="Models\Spotify Model\Playlists.cs" />
+    <Compile Include="Models\Spotify Model\PlaylistTrackItem.cs" />
+    <Compile Include="Models\Spotify Model\PlaylistTracks.cs" />
+    <Compile Include="Models\Spotify Model\SavedAlbums.cs" />
+    <Compile Include="Models\Spotify Model\SavedTracks.cs" />
+    <Compile Include="Models\Spotify Service\SpotifyHelpers.cs" />
+    <Compile Include="Models\Spotify Service\SpotifyService.cs" />
+    <Compile Include="Models\Spotify Model\SpotifyToken.cs" />
+    <Compile Include="Models\Spotify Model\Track.cs" />
+    <Compile Include="Models\Spotify Model\Tracks.cs" />
+    <Compile Include="Models\Spotify Model\UserProfiles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\AlbumDetailsViewModel.cs" />
+    <Compile Include="ViewModel\ArtistDetailsViewModel.cs" />
+    <Compile Include="ViewModel\PlaylistWithTracksViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -186,9 +260,28 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\1464830112357.jpg" />
+    <Content Include="images\9579853-Silhouettes-color-s-de-gens-dansant-sur-un-fond-de-haut-parleur-grunge-Banque-d%27images.jpg" />
+    <Content Include="images\ajax-loader.gif" />
+    <Content Include="images\giphy.gif" />
+    <Content Include="images\headphones-are-seen-in-front-of-a-logo-of-online-music-streaming-service-spotify-in-this-illustration-picture.jpg" />
+    <Content Include="images\img_5219_ins_24730_600.jpg" />
+    <Content Include="images\Paint theme 3.jpg" />
+    <Content Include="images\spin.gif" />
+    <Content Include="images\spinner-rosetta-gray_loading.gif" />
+    <Content Include="images\Spotify logo.png" />
+    <Content Include="images\spotify-icon-x2.png" />
+    <Content Include="images\spotify-logo.jpg" />
+    <Content Include="images\spotify_logo.jpg" />
+    <Content Include="images\spotify_logo_2.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="ApplicationInsights.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\ie-emulation-modes-warning.js" />
+    <Content Include="Scripts\ie10-viewport-bug-workaround.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -234,6 +327,17 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Albums\AlbumDetails.cshtml" />
+    <Content Include="Views\Albums\Index.cshtml" />
+    <Content Include="Views\Albums\SavedAlbumDetails.cshtml" />
+    <Content Include="Views\Albums\SavedAlbums.cshtml" />
+    <Content Include="Views\Artists\ArtistDetails.cshtml" />
+    <Content Include="Views\Artists\Index.cshtml" />
+    <Content Include="Views\Home\AuthorizationResponse.cshtml" />
+    <Content Include="Views\Playlist\Index.cshtml" />
+    <Content Include="Views\Playlist\Playlist.cshtml" />
+    <Content Include="Views\Profile\Index.cshtml" />
+    <Content Include="Views\Tracks\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
